[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/sprites/player_weapon_fires/vengeful_spirits/vengeful_spirit_02.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/player_weapon_fires/vengeful_spirits/vengeful_spirit_03.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/player_weapon_fires/vengeful_spirits/vengeful_spirit_04.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/player_weapon_fires/vengeful_spirits/vengeful_spirit_05.png" type="Texture" id=4]
[ext_resource path="res://scenes/player_weapon_fires/ForbiddenScrollWeaponFire.gd" type="Script" id=5]
[ext_resource path="res://assets/sprites/player_weapon_fires/vengeful_spirits/vengeful_spirit_01.png" type="Texture" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 6, 10.5 )

[node name="ForbiddenScrollWeaponFire" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
playing = true

[node name="HurtArea" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtArea"]
position = Vector2( 0, -0.5 )
shape = SubResource( 2 )

[node name="LifetimeTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="HurtArea" to="." method="_on_HurtArea_body_entered"]
[connection signal="timeout" from="LifetimeTimer" to="." method="_on_LifetimeTimer_timeout"]
